# gate

./: CMakeLists.txt  README.md  setup.cmake
gate/: CMakeLists.txt
gate/resource/: gate.uidesc
gate/src/: CIDs.h  controller.cpp  controller.h  factory.cpp  processor.cpp  processor.h  version.h
gate_auv3/: AppInfo.plist  CMakeLists.txt  ExtensionInfo.plist  audiounitconfig.h
gate_auv3/src/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m
